--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
           </md-menu-item>
           <md-divider></md-divider>
           <md-menu-item flex layout="row">
-            <md-button ng-href="#sales">
+            <md-button ng-href="#invoices">
               <span flex="15"><i class="material-icons">&#xE8CC;</i></span>
-              <span flex md-menu-align-target>Sales</span>
+              <span flex md-menu-align-target>Invoices</span>
             </md-button>
           </md-menu-item>
           <md-divider></md-divider>
         </md-content>
       </md-sidenav>
 
-      <md-content>
+      <md-content layout-fill>
         <md-button ng-click="openRightMenu()">Open Right Menu</md-button>
 
         <div ng-view></div>
@@ -57,8 +57,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
 
-    <script src="./js/controllers/sales.js"></script>
-    <script src="./js/controllers/core.js"></script>
-    <script src="./js/invoiceo-app.js"></script>
+    <script src="./app/controllers/sales.js"></script>
+    <script src="./app/controllers/core.js"></script>
+    <script src="./app/invoiceo-app.js"></script>
   </body>
 </html>
