--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body ng-app="invoiceoApp" ng-cloak>
-    <div id="sideNavContainer" ng-controller="sideNavController as ctrl" layout="row" ng-cloak>
+    <div id="sideNavContainer" ng-controller="sideNavController as ctrl" flex layout="row" ng-cloak>
       <md-sidenav md-component-id="left" md-is-locked-open="$mdMedia('gt-md')" class="md-sidenav-left">
         <md-toolbar class="md-primary">
-          <h3>Invoiceo</h3>
+          <div class="md-toolbar-tools">
+            <h2 flex md-truncate>Invoiceo</h2>
+          </div>
         </md-toolbar>
 
         <md-content flex class="sidebar">
@@ -40,14 +42,37 @@
       </md-sidenav>
 
       <md-content layout-fill>
-        <md-button ng-click="openRightMenu()">Open Right Menu</md-button>
+        <md-toolbar class="md-hue-2">
+          <div class="md-toolbar-tools">
+            <md-button hide-gt-md ng-click="openLeftMenu()" aria-label="Menu" class="md-icon-button">
+              <md-icon>&#xE5D2;</md-icon>
+            </md-button>
+            <!--<md-button ng-href="#" aria-label="Back" class="md-icon-button">
+              <md-icon>&#xE5C4;</md-icon>
+            </md-button>
+
+            <h2 flex md-truncate>Invoiceo</h2>-->
+            <span flex md-truncate></span>
+
+            <md-button class="md-icon-button" aria-label="Favorite" ng-click="myFavorite = !myFavorite">
+              <md-icon ng-show="myFavorite" style="color: greenyellow;">&#xE87D;</md-icon>
+              <md-icon ng-hide="myFavorite" style="color: greenyellow;">&#xE87E;</md-icon>
+            </md-button>
+
+            <md-button class="md-icon-button" aria-label="More">
+              <md-icon>&#xE5D4;</md-icon>
+            </md-button>
+          </div>
+        </md-toolbar>
+
+        <!--<md-button ng-click="openRightMenu()">Open Right Menu</md-button>-->
 
         <div ng-view></div>
       </md-content>
 
-      <md-sidenav md-component-id="right" class="md-sidenav-right">
+      <!--<md-sidenav md-component-id="right" class="md-sidenav-right">
         <md-button>Hello</md-button>
-      </md-sidenav>
+      </md-sidenav>-->
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
