--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Invoiceo</title>
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.1/angular-material.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.3/angular-material.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body ng-app="invoiceoApp" ng-cloak>
@@ -18,21 +18,21 @@
 
         <md-content flex class="sidebar">
           <md-menu-item flex layout="row">
-            <md-button ng-href="#home">
+            <md-button ng-href="#!home">
               <md-icon>&#xE88A;</md-icon>
               <span flex md-menu-align-target>Home</span>
             </md-button>
           </md-menu-item>
           <md-divider></md-divider>
           <md-menu-item flex layout="row">
-            <md-button ng-href="#dashboard">
+            <md-button ng-href="#!dashboard">
               <md-icon>&#xE871;</md-icon>
               <span flex md-menu-align-target>Dashboard</span>
             </md-button>
           </md-menu-item>
           <md-divider></md-divider>
           <md-menu-item flex layout="row">
-            <md-button ng-href="#invoices">
+            <md-button ng-href="#!invoices">
               <md-icon>&#xE8CC;</md-icon>
               <span flex md-menu-align-target>Invoices</span>
             </md-button>
@@ -78,12 +78,13 @@
       </md-sidenav>-->
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.1/angular-material.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.2/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.2/angular-route.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.2/angular-animate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.2/angular-aria.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.2/angular-resource.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.2/angular-messages.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.3/angular-material.min.js"></script>
 
     <script src="./app/controllers/sales.js"></script>
     <script src="./app/controllers/core.js"></script>
