changed ng-route to ui-router; added services for $resource

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <!--<md-button ng-click="openRightMenu()">Open Right Menu</md-button>-->
 
-        <div ng-view></div>
+        <div ui-view></div>
       </md-content>
 
       <!--<md-sidenav md-component-id="right" class="md-sidenav-right">
@@ -79,11 +79,11 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.2/angular.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.2/angular-route.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.2/angular-animate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.2/angular-aria.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.2/angular-resource.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.2/angular-messages.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.3/angular-material.min.js"></script>
 
     <script src="./app/controllers/sales.js"></script>
